--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,10 @@
 @import 'stylesheets/colours';
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 600px;
+  padding: 1rem;
+  position: relative;
+}
