more cleanup and some css

--- a/src/components/Loader/styles.scss
+++ b/src/components/Loader/styles.scss
@@ -12,7 +12,7 @@ $grey: rgb(85, 85, 85);
   position: absolute;
   right: 0 ;
   text-indent: -9999em;
-  top: 40px;
+  top: 5rem;
   transform: translateZ(0);
   width: 1em;
   &:before,
