--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,14 @@
 @import 'stylesheets/colours';
+@import 'stylesheets/fonts';
+
+* {
+  box-sizing: border-box;
+}
 
 .wrapper {
   display: flex;
   flex-direction: column;
+  font-family: $font-family;
   margin: auto;
   max-width: 600px;
   padding: 1rem;
