--- a/src/components/SearchResults/styles.scss
+++ b/src/components/SearchResults/styles.scss
@@ -1,12 +1,20 @@
 .avatar {
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 4rem;
   margin-right: 1rem;
   max-width: 70px;
 }
 
+.wrapper {
+  padding: 0;
+}
+
 .result {
   align-items: center;
+  align-self: flex-start;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 1rem;
   display: flex;
   margin-bottom: 1rem;
+  padding: .5rem;
 }
