--- a/src/components/SearchResults/styles.scss
+++ b/src/components/SearchResults/styles.scss
@@ -8,7 +8,20 @@
 .wrapper {
   padding: 0;
 }
+.infoWrapper {
+  display: flex;
+  flex-direction: column;
+}
 
+.title {
+  font-weight: bold;
+  margin-right: .2rem;
+}
+
+.info {
+  display: flex;
+  flex-direction: row;
+}
 .result {
   align-items: center;
   align-self: flex-start;
