--- a/src/components/SearchResults/styles.scss
+++ b/src/components/SearchResults/styles.scss
@@ -1,4 +1,5 @@
 .avatar {
+  align-self: flex-start;
   border: 2px solid rgb(0, 0, 0);
   border-radius: 4rem;
   margin-right: 1rem;
@@ -7,6 +8,7 @@
 
 .wrapper {
   padding: 0;
+  position: relative;
 }
 .infoWrapper {
   display: flex;
