--- a/src/components/SearchResults/styles.scss
+++ b/src/components/SearchResults/styles.scss
@@ -1,5 +1,4 @@
 .avatar {
-  align-self: flex-start;
   border: 2px solid rgb(0, 0, 0);
   border-radius: 4rem;
   margin-right: 1rem;
@@ -30,6 +29,7 @@
   border: 2px solid rgb(0, 0, 0);
   border-radius: 1rem;
   display: flex;
+  flex-direction: column;
   margin-bottom: 1rem;
   padding: .5rem;
 }
