commits now link out to github activity

--- a/src/components/SearchResults/styles.scss
+++ b/src/components/SearchResults/styles.scss
@@ -26,7 +26,7 @@
 .result {
   align-items: center;
   align-self: flex-start;
-  border: 2px solid rgb(0, 0, 0);
+  border: 1px solid rgba(161, 161, 161, 1);
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
