--- a/src/components/ActivityHistory/styles.scss
+++ b/src/components/ActivityHistory/styles.scss
@@ -4,13 +4,13 @@
 }
 
 .repo {
-  border: 1px solid;
+  border: 1px solid rgba(161, 161, 161, 1);
   display: flex;
   flex-direction: column;
   list-style: none;
-  margin: 1rem 0;
+  margin: 1rem .5rem;
   padding: .5rem;
-  width: 100%;
+  width: 47%;
 }
 
 .repoName {
@@ -20,6 +20,19 @@
 }
 
 .activityWrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
   padding: 0;
   width: 100%;
+}
+
+.commitsWrapper {
+  font-size: .9rem;
+  padding: 0;
+}
+.commitTime {
+  list-style: none;
+  padding-left: .3rem;
 }
