--- a/src/components/ActivityHistory/styles.scss
+++ b/src/components/ActivityHistory/styles.scss
@@ -11,6 +11,10 @@
   margin: 1rem .5rem;
   padding: .5rem;
   width: 47%;
+
+  @media only screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .repoName {
